--- a/introduction.tex
+++ b/introduction.tex
@@ -13,7 +13,7 @@ However, as {\sc osprey} grew to include more algorithms and features (Fig.~\ref
 
 \jccsubsection{Past successes of {\sc osprey}}
 
-{\sc osprey} has been used for an impressive number of empirically successful designs, ranging from enzyme design to antibody design to prediction of antibiotic resistance mutations.  Notably, {\sc osprey} has been successful in many~\textit{prospective} experimental studies, i.e., studies in which our designed sequences are tested experimentally, thus validating \osprey through use in practice rather than simply through a retrospective comparison of OSPREY calculations to previous experimental results.  {\sc osprey} is most applicable to problems that can be posed in terms of biophysical state transitions like binding, allowing the $K^*$ algorithm and its variants to predict the optimal sequences based on an estimate of binding free energy computed using Boltzmann-weighted conformational ensembles.  Moreover, most protein design problems can be posed in this way, sometimes in terms of binding to more than one ligand.  \osprey is capable of both~\textit{positive design}, in which binding of a designed protein to a target is increased, and~\textit{negative design}, in which binding to a target is decreased, as well as more complicated design objectives where specific binding to one target and not to another is required.  
+{\sc osprey} has been used for an impressive number of empirically successful designs, ranging from enzyme design to antibody design to prediction of antibiotic resistance mutations.  Notably, {\sc osprey} has been successful in many~\textit{prospective} experimental studies, i.e., studies in which our designed sequences are tested experimentally, thus validating \osprey through use in practice rather than simply through a retrospective comparison of \osprey calculations to previous experimental results.  {\sc osprey} is most applicable to problems that can be posed in terms of biophysical state transitions like binding, allowing the $K^*$ algorithm and its variants to predict the optimal sequences based on an estimate of binding free energy computed using Boltzmann-weighted conformational ensembles.  Moreover, most protein design problems can be posed in this way, sometimes in terms of binding to more than one ligand.  \osprey is capable of both~\textit{positive design}, in which binding of a designed protein to a target is increased, and~\textit{negative design}, in which binding to a target is decreased, as well as more complicated design objectives where specific binding to one target and not to another is required.  
 
 For example, we have successfully predicted novel resistance mutations to new inhibitors in MRSA (methicillin-resistant~\textit{Staphylococcus aureus}) using multistate design (combining negative and positive design).  \osprey does this by searching for sequences that have impaired drug binding compared to wild-type DHFR, but still form the enzyme-substrate complex as usual, allowing catalysis to proceed~\cite{DHFR-PNAS,DHFR-PNAS2}.  Our predictions were validated not only biochemically and structurally, but also at an organismal level~\cite{DHFR-PNAS2, mimb_resistance}.  Similarly, we have successfully changed the preferred substrate of an enzyme---the phenylalanine adenylation domain of gramicidin S synthetase---from phenylalanine to leucine by modeling of the two enzyme-substrate complexes, searching for sequences with improved binding to leucine and reduced binding to phenylalanine~\cite{GrsA-LeuA}.  The resulting designer enzymes exhibited improved catalysis, and designs changing the specificity from phenlyalanine to several charged amino acids were successful as well~\cite{GrsA-LeuA}.  The combination of positive and negative design in \osprey has also successfully designed mutants of the gp120 surface protein of HIV that bind specifically to particular classes of antibodies, enabling their use as probes for detecting and isolating those antibodies from human sera~\cite{specific_probes}.  
 
